packages/gcn/src/snapshots/gcn__tests__clear_shader-2.snap
---
source: packages/gcn/src/lib.rs
expression: shader.displayed()
---
0x0000: s_load_dwordx4 s[12:15], s[2:3], 0x0
0x0004: s_load_dwordx4 s[16:19], s[2:3], 0x4
0x0008: s_waitcnt 0x7f
0x000c: buffer_load_format_xyzw SKIPPED
0x0014: buffer_load_format_xyzw SKIPPED
0x001c: s_waitcnt 0x0
0x0020: s_load_dwordx4 s[0:3], s[6:7], 0x0
0x0024: s_waitcnt 0xc07f
0x0028: s_buffer_load_dwordx4 s[4:7], s[0:1], 0x8
0x002c: s_buffer_load_dwordx4 s[8:11], s[0:1], 0xc
0x0030: s_buffer_load_dwordx4 s[12:15], s[0:1], 0x4
0x0034: s_buffer_load_dwordx4 s[0:3], s[0:1], 0x0
0x0038: s_waitcnt 0x71
0x003c: v_mul_f32 v7, s4, v6
0x0040: v_mul_f32 v0, s5, v6
0x0044: v_mul_f32 v1, s6, v6
0x0048: v_mul_f32 v6, s7, v6
0x004c: v_add_f32 v7, s8, v7
0x0050: v_add_f32 v0, s9, v0
0x0054: v_add_f32 v1, s10, v1
0x0058: v_add_f32 v6, s11, v6
0x005c: v_mac_f32 v7, s12, v5
0x0060: v_mac_f32 v0, s13, v5
0x0064: v_mac_f32 v1, s14, v5
0x0068: v_mac_f32 v6, s15, v5
0x006c: v_mac_f32 v7, s0, v4
0x0070: v_mac_f32 v0, s1, v4
0x0074: v_mac_f32 v1, s2, v4
0x0078: v_mac_f32 v6, s3, v4
0x007c: exp pos0, v7, v0, v1, v6, done
0x0084: s_waitcnt 0x3f70
0x0088: exp param0, v8, v9, off, off
0x0090: s_endpgm 0x0
