packages/gcn/src/snapshots/gcn__tests__compute_shader.snap
---
source: packages/gcn/src/lib.rs
expression: shader.debug()
---
[
    Instruction {
        inner: SOP1(
            SOP1Instruction {
                op: s_mov_b32,
                ssrc0: LiteralConstant,
                sdst: VccHi,
            },
        ),
        literal_constant: Some(
            13,
        ),
        program_counter: 0,
    },
    Instruction {
        inner: SOP2(
            SOP2Instruction {
                op: s_mul_i32,
                ssrc0: Destination(
                    ScalarGPR(
                        12,
                    ),
                ),
                ssrc1: IntegerConstant(
                    InlineIntegerConstant(
                        64,
                    ),
                ),
                sdst: VccLo,
            },
        ),
        literal_constant: None,
        program_counter: 8,
    },
    Instruction {
        inner: SMEM(
            SMEMInstruction {
                op: s_buffer_load_dword,
                offset: 0,
                imm: true,
                sbase: 4,
                sdst: ScalarGPR(
                    12,
                ),
            },
        ),
        literal_constant: None,
        program_counter: 12,
    },
    Instruction {
        inner: VOP2(
            VOP2Instruction {
                op: v_add_co_u32,
                src0: Scalar(
                    Destination(
                        VccLo,
                    ),
                ),
                vsrc1: VectorGPR {
                    register_idx: 0,
                },
                vdst: VectorGPR {
                    register_idx: 0,
                },
            },
        ),
        literal_constant: None,
        program_counter: 16,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 127,
            },
        ),
        literal_constant: None,
        program_counter: 20,
    },
    Instruction {
        inner: VOPC(
            VOPCInstruction {
                op: v_cmpx_gt_u32,
                src0: Scalar(
                    Destination(
                        ScalarGPR(
                            12,
                        ),
                    ),
                ),
                vsrc1: VectorGPR {
                    register_idx: 0,
                },
            },
        ),
        literal_constant: None,
        program_counter: 24,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_cbranch_execz,
                simm16: 10,
            },
        ),
        literal_constant: None,
        program_counter: 28,
    },
    Instruction {
        inner: SMEM(
            SMEMInstruction {
                op: s_buffer_load_dword,
                offset: 1,
                imm: true,
                sbase: 4,
                sdst: ScalarGPR(
                    8,
                ),
            },
        ),
        literal_constant: None,
        program_counter: 32,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 127,
            },
        ),
        literal_constant: None,
        program_counter: 36,
    },
    Instruction {
        inner: VOP2(
            VOP2Instruction {
                op: v_and_b32,
                src0: Scalar(
                    Destination(
                        ScalarGPR(
                            8,
                        ),
                    ),
                ),
                vsrc1: VectorGPR {
                    register_idx: 0,
                },
                vdst: VectorGPR {
                    register_idx: 1,
                },
            },
        ),
        literal_constant: None,
        program_counter: 40,
    },
    Instruction {
        inner: MUBUF(
            MUBUFInstruction {
                op: buffer_load_format_x,
                offset: Offset(
                    0,
                ),
                offen: false,
                idxen: true,
                glc: false,
                addr64: false,
                lds: false,
                vaddr: VectorGPR {
                    register_idx: 1,
                },
                vdata: VectorGPR {
                    register_idx: 1,
                },
                srsrc: ScalarGeneralPurposeRegisterGroup {
                    value: 0,
                },
                slc: false,
                tfe: false,
                soffset: 128,
            },
        ),
        literal_constant: None,
        program_counter: 44,
    },
    Instruction {
        inner: VOP3(
            VOP3Instruction {
                op: VOPC(
                    v_cmpx_gt_u32,
                ),
                vdst: VectorGPR {
                    register_idx: 0,
                },
                src0: TransformedOperand {
                    operand: Scalar(
                        Destination(
                            ScalarGPR(
                                6,
                            ),
                        ),
                    ),
                    abs: false,
                    neg: false,
                },
                src1: TransformedOperand {
                    operand: VectorGPR(
                        VectorGPR {
                            register_idx: 0,
                        },
                    ),
                    abs: false,
                    neg: false,
                },
                src2: TransformedOperand {
                    operand: Scalar(
                        Destination(
                            ScalarGPR(
                                0,
                            ),
                        ),
                    ),
                    abs: false,
                    neg: false,
                },
                clamp: false,
                output_modifier: None,
            },
        ),
        literal_constant: None,
        program_counter: 52,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_waitcnt,
                simm16: 3952,
            },
        ),
        literal_constant: None,
        program_counter: 60,
    },
    Instruction {
        inner: MUBUF(
            MUBUFInstruction {
                op: buffer_store_format_x,
                offset: Offset(
                    0,
                ),
                offen: false,
                idxen: true,
                glc: false,
                addr64: false,
                lds: false,
                vaddr: VectorGPR {
                    register_idx: 0,
                },
                vdata: VectorGPR {
                    register_idx: 1,
                },
                srsrc: ScalarGeneralPurposeRegisterGroup {
                    value: 1,
                },
                slc: false,
                tfe: false,
                soffset: 128,
            },
        ),
        literal_constant: None,
        program_counter: 64,
    },
    Instruction {
        inner: SOPP(
            SOPPInstruction {
                op: s_endpgm,
                simm16: 0,
            },
        ),
        literal_constant: None,
        program_counter: 72,
    },
]
