packages/gcn/src/snapshots/gcn__tests__compute_shader_2-2.snap
---
source: packages/gcn/src/lib.rs
expression: shader.displayed()
---
0x0000: s_mov_b32 vcc_hi, 0xb
0x0008: s_lshl_b32 s0, s16, 6
0x000c: v_add_co_u32 v0, s0, v0
0x0010: s_buffer_load_dwordx2 s[0:3], s[12:13], 0x0
0x0014: s_waitcnt 0x7f
0x0018: v_cmp_gt_u32 s0, v0
0x001c: s_and_saveexec_b64 s[2:3], vcc_lo
0x0020: v_and_b32 v1, s1, v0
0x0024: s_cbranch_execz 0x7
0x0028: buffer_load_format_x SKIPPED
0x0030: v_cmp_gt_u32 s10, v0
0x0034: s_and_saveexec_b64 s[0:1], vcc_lo
0x0038: s_waitcnt 0xf70
0x003c: buffer_store_format_x SKIPPED
0x0044: s_endpgm 0x0
