packages/gcn/src/snapshots/gcn__tests__cube_fragment_shader-2.snap
---
source: packages/gcn/src/lib.rs
expression: shader.displayed()
---
0x0000: s_wqm_b64 exec_lo, exec_lo
0x0004: s_load_dwordx8 s[8:11], s[0:1], 0x0
0x0008: s_load_dwordx4 s[0:3], s[0:1], 0x8
0x000c: s_mov_b32 m0, s4
0x0010: v_interp_p1_f32 v2, v0, attr0.x
0x0014: v_interp_p2_f32 v2, v1, attr0.x
0x0018: v_interp_p1_f32 v0, v0, attr0.y
0x001c: v_interp_p2_f32 v0, v1, attr0.y
0x0020: v_mov_b32 v3, v0
0x0024: s_waitcnt 0xc07f
0x0028: image_sample v[0:2], v[2:3], s[8:15], s[0:3], dmask(rgb)
0x0030: s_waitcnt 0x3f70
0x0034: v_cvt_pkrtz_f16_f32 v0, v0, v1
0x0038: v_cvt_pkrtz_f16_f32 v1, v2, 1.f, s0
0x0040: exp mrt_color0, v0, v1, off, off, compress, done, vm
0x0048: s_endpgm 0x0
